--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>online vizitka</title>
   </head>
-  <body>
-    <div class="card">
-      <header class="header">
+  <body class="body fx-j-a-c">
+    <div class="card f">
+      <header class="header fx-j-a-c">
         <h3>Brainlab login</h3>
       </header>
-      <article class="content">
-        <img class="photo" src="./office.jpeg" alt="" />
+      <article class="content f">
+        <img class="content__office" src="./office.jpeg" alt="" />
 
-        <article class="input">
-          <div class="input__user-password">
+        <article class="content__input fx-j-a-c">
+          <div class="content__input__user-password f">
             <label>Username</label>
             <input type="text" placeholder="Username" />
             <label>Password</label>
