Login sa utility klasom-opacity-pseudoklasa

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>online vizitka</title>
+    <title>Brainlab login page</title>
   </head>
   <body class="body fx-j-a-c">
     <div class="card f">
@@ -21,6 +21,7 @@
             <input type="text" placeholder="Username" />
             <label>Password</label>
             <input type="text" placeholder="Password" />
+            <button>ENTER</button>
           </div>
         </article>
       </article>
